--- a/templates/base.html
+++ b/templates/base.html
@@ -11,19 +11,19 @@
 <body>
 	<header>
 		<nav>
-			<!-- <div class="nav-wrapper">
-				<a href="{{url_for('get_user')}}" class="brand-logo">Task Manager</a>
+			<div class="nav-wrapper">
+				<a href="{{url_for('user_home')}}" class="brand-logo">Task Manager</a>
 				<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
-					<li><a href="{{url_for('get_user')}}">Home</a></li>
+					<li><a href="{{url_for('user_home')}}">Home</a></li>
 					
 					
 				</ul>
 				<ul class="side-nav" id="mobile-demo">
-					<li><a href="{{url_for('get_user')}}">Home</a></li>
+					<li><a href="{{url_for('user_home')}}">Home</a></li>
 					
 				</ul>
-			</div> -->
+			</div>
 		</nav>
 	</header>
 	<div class="container">
