--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -1,12 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <h3>Our Dogs</h3>
-{% for dog in dogs%}
-    
-{% endfor %}
-    <p>Name: dog.name</p>
-    <p>Breed: dog.breed</p>
-    <p>Bio: dog.bio</p>
-    <p>Available: dog.availability</p>
+
+<p>TEST</p>
 
 {% endblock %}
