Collapsible menu and links working

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 	<header>
 		<nav>
 			<div class="nav-wrapper">
-				<a href="{{url_for('user_home')}}" class="brand-logo">Task Manager</a>
+				<a href="{{url_for('user_home')}}" class="brand-logo">Pawer</a>
 				<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
 					<li><a href="{{url_for('user_home')}}">Home</a></li>
@@ -21,6 +21,11 @@
 				</ul>
 				<ul class="side-nav" id="mobile-demo">
 					<li><a href="{{url_for('user_home')}}">Home</a></li>
+                    <li><a href="{{url_for('user_home')}}">Register</a></li>
+                    <li><a href="{{url_for('user_home')}}">Adoption</a></li>
+                    <li><a href="{{url_for('user_home')}}">Training</a></li>
+                    <li><a href="{{url_for('user_home')}}">Stores</a></li>
+                    
 					
 				</ul>
 			</div>
@@ -35,7 +40,7 @@
 	<!-- jQueryhere has to go BEFORE Materialize because jQuery needs to be active FIRST -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-	<!-- <script type="text/javascript">
+	<script type="text/javascript">
 		$(document).ready(function() {
             $('.collapsible').collapsible();
             $('select').material_select();
@@ -48,7 +53,7 @@
             clear: 'Clear',
             close: 'Ok',
             closeOnSelect: false // Close upon selecting a date,
-        }); -->
+        });
 	</script>
 </body>
 
