--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
 	<header>
 		<nav>
 			<div class="nav-wrapper">
+                <img class ="pawer-logo" src="./static/images/pawer_logo.png" alt="Pawer Logo">
 				<a href="{{url_for('user_home')}}" class="brand-logo">Pawer</a>
 				<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
