SASS working on gitpod and logo updated

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ html {
   scroll-behavior: smooth;
 }
 
-.pawer-logo {
+.pawer-logo-img {
   max-height: 100%;
 }
 /*# sourceMappingURL=style.css.map */
