--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -22,6 +22,12 @@ $blue-color: #1184ff;
 
 // Base.html
 
-.pawer-logo{
+.pawer-logo-img {
     max-height: 100%;
+}
+.nav-logo{
+    
+}
+.pawer-logo-text {
+
 }
