--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,10 @@
 				<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
 					<li><a href="{{url_for('user_home')}}">Home</a></li>
+                    <li><a href="{{url_for('user_home')}}">Register</a></li>
+                    <li><a href="{{url_for('user_home')}}">Adoption</a></li>
+                    <li><a href="{{url_for('user_home')}}">Training</a></li>
+                    <li><a href="{{url_for('user_home')}}">Stores</a></li>
 					
 					
 				</ul>
