Base.html updated

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,9 +31,9 @@
                         <li><a href="{{url_for('user_home')}}">Stores</a></li>          
                     </ul>
                 </div>
-                <div class="center col s8">
-                    <img class ="pawer-logo-img" src="./static/images/pawer_logo.png" alt="Pawer Logo">
-                    <a href="{{url_for('user_home')}}" class="pawer-logo-text">PAWER</a>
+                <div class="col s8 logo-box">
+                    <img src="./static/images/pawer_logo.png" alt="Pawer Logo">
+                    <a href="{{url_for('user_home')}}" >PAWER</a>
                 </div>
                 <div class="col s2">
                     <p>| ADOPTION</p>
