--- a/templates/base.html
+++ b/templates/base.html
@@ -52,6 +52,7 @@
 	<!-- jQueryhere has to go BEFORE Materialize because jQuery needs to be active FIRST -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script src="static/js/script.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
             $('.collapsible').collapsible();
