--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -6,19 +6,19 @@
     <div class="carousel-fixed-item center">
       <a class="btn waves-effect white grey-text darken-text-2">button</a>
     </div>
-    <div class="carousel-item red white-text" href="#one!">
-      <h2>First Panel</h2>
-      <p class="white-text">This is your first panel</p>
+    <div class="carousel-item white-text carousel-bg-1" href="static/images/pawer_logo.png">
+      <h2>PAWER</h2>
+      <p class="white-text">slogan</p>
     </div>
-    <div class="carousel-item amber white-text" href="#two!">
+    <div class="carousel-item white-text carousel-bg-2" href="static/images/carousel/dog_adoption.jpg">
       <h2>Second Panel</h2>
       <p class="white-text">This is your second panel</p>
     </div>
-    <div class="carousel-item green white-text" href="#three!">
+    <div class="carousel-item white-text carousel-bg-3" href="#three!">
       <h2>Third Panel</h2>
       <p class="white-text">This is your third panel</p>
     </div>
-    <div class="carousel-item blue white-text" href="#four!">
+    <div class="carousel-item white-text carousel-bg-4" href="#four!">
       <h2>Fourth Panel</h2>
       <p class="white-text">This is your fourth panel</p>
     </div>
