--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -62,6 +62,14 @@ $blue-color: #1184ff;
     }
 }
 
+/* User_home */
+
+.carousel {
+    .carousel-bg-1 {
+        background-image: url(../static/images/pawer_logo.png);
+    }
+}
+
 
 
 
