Carousel image working

--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -4,21 +4,23 @@
 
 <div class="carousel carousel-slider center">
     <div class="carousel-fixed-item center">
-      <a class="btn waves-effect white grey-text darken-text-2">button</a>
+      <a class="btn waves-effect white grey-text darken-text-2">screen1</a>
     </div>
-    <div class="carousel-item white-text carousel-bg-1" href="static/images/pawer_logo.png">
-      <h2>PAWER</h2>
-      <p class="white-text">slogan</p>
+    <div class="carousel-item white-text carousel-bg-1">
+      <div class="bg-inner-text-1">
+        <h2>PAWER</h2>
+        <p class="white-text">slogan</p>
+      </div>
     </div>
-    <div class="carousel-item white-text carousel-bg-2" href="static/images/carousel/dog_adoption.jpg">
+    <div class="carousel-item white-text carousel-bg-2">
       <h2>Second Panel</h2>
       <p class="white-text">This is your second panel</p>
     </div>
-    <div class="carousel-item white-text carousel-bg-3" href="#three!">
+    <div class="carousel-item white-text carousel-bg-3">
       <h2>Third Panel</h2>
       <p class="white-text">This is your third panel</p>
     </div>
-    <div class="carousel-item white-text carousel-bg-4" href="#four!">
+    <div class="carousel-item white-text carousel-bg-4">
       <h2>Fourth Panel</h2>
       <p class="white-text">This is your fourth panel</p>
     </div>
