--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,7 +57,11 @@ html {
 
 /* User_home */
 .carousel .carousel-bg-1 {
-  background-image: url(../static/images/pawer_logo.png);
+  background-image: url(../images/pawer_logo.png);
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: 50%;
+  background-color: #FCD23C;
 }
 
 @media only screen and (min-width: 601px) {
