--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -66,7 +66,12 @@ $blue-color: #1184ff;
 
 .carousel {
     .carousel-bg-1 {
-        background-image: url(../static/images/pawer_logo.png);
+        background-image: url(../images/pawer_logo.png);
+        background-repeat: no-repeat;
+        background-position: left;
+        background-size: 50%;
+        background-color: $yellow-color;
+        
     }
 }
 
