Changed carousel for parallax and uploaded new photos

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,6 +22,14 @@ html {
   background-color: #FCD23C;
 }
 
+.parallax-container {
+  width: 100%;
+}
+
+.parallax-container .test-div {
+  height: 50vh;
+}
+
 .nav {
   padding: 1rem;
 }
