--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -27,10 +27,12 @@ $blue-color: #1184ff;
 
 .secondary-text {
     font-family: "Lexend Tera", sans-serif;
+    color: $black-color;
 }
 
 .general-text {
     font-family: "Roboto", sans-serif;
+    color: $black-color;
 }
 
 .odd-section {
@@ -39,34 +41,61 @@ $blue-color: #1184ff;
 
 .parallax-container {
     width: 100%;
-    .parallax {
-        img {
-            max-width: 20rem;
-        }
-    }
+
 
 }
 
 
 
 // Base.html
+
 .nav {
     padding: 1rem;
 }
 .nav-wrapper {
     background-color: $yellow-color;
-    
+    padding: 0 1rem;
+
+    .menu-icon {
+        color: $black-color;
+    }
+
+    li a {
+        font-family: "Roboto", sans-serif;
+        font-weight: 700;
+        color: $black-color;
+    }
+    .button-collapse {
+        padding: 0.5rem 0;
+    }
     .logo-box {
         display: flex;
         justify-content: center;
-        align-items: baseline;
+        padding: 0.2rem 0;
 
+        .three-words {
+            padding: 0 0.3rem 0.6rem;
+            margin: auto;
+
+            p {
+                margin: 0;
+                color: $red-color;
+                font-size: 1.2rem;
+                line-height: 1.3rem;
+                font-weight: 600;
+            }
+        }
         img {
             max-height: 4rem;
-            margin: 0.2rem 0.5rem;
+            // margin: 0.2rem 0.5rem;
         }
     }
     
+    .register-box {
+        text-align: right;
+        font-size: 1.5rem;
+    }
+
     span {
         color: $red-color;
         font-family: "Lexend Tera", "Sans Serif";
@@ -74,16 +103,13 @@ $blue-color: #1184ff;
         font-size: 1.3rem;
         line-height: 1.3rem;
     }
-    .col.s2 {
-        padding: 0.3rem;
+
+    .register-button {
+        color: $black-color;
+        font-weight: 700;
+        margin: auto;
     }
-    p {
-        margin: 0;
-        color: $red-color;
-        font-size: 1.2rem;
-        line-height: 1.3rem;
-        font-weight: 600;
-    }
+
 }
 
 /* User_home */
