added adoption and training sections to user_home.html

--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -6,13 +6,29 @@
 </div>
 <div class="section white">
     <div class="row container">
-        <h2 class="header">Parallax</h2>
-        <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+        <h2 class="header">Find your best friend!</h2>
+        <p class="secondary-text">We have a great variety of dogs and the staff to find your perfect match.</p>
+        <p>Adopting a dog is a big deal, we know. We are here to make sure you find a new best friend that will be a great fit to your life.</p>
+        <p>Our team of specialists are looking forward to hear from you what do you look for and to give you directions on how to enhance your experience as a 
+        dog-owner-to-be or how to help your pack accepting their new buddy.</p>
+        <h4>Visit our <a href="#" >adoption page</a></h4>
         <div class="test-div"></div>
     </div>
 </div>  
 <div class="parallax-container">
     <div class="parallax"><img src="/static/images/dog_training.jpg"></div>
 </div>
+<div class="section white">
+    <div class="row container">
+        <h2 class="header">Go training!</h2>
+        <p class="secondary-text">Find the best trainers and places where you can train your dog!</p>
+        <p>There's no better thing than going out and showing off your dog working with you...Having your friends saying how well behaviored they are!</p>
+        <p>We have a great pool of certified professionals that can help you reaching your goals and even more. Most options will offer you different levels of training, 
+        depending on how you and your dog are communicating.</p>
+        <p>One-on-one or group sessions are available all year around.</p>
+        <h4>Visit our <a href="#" >PAWER Training</a> page</h4>
+        <div class="test-div"></div>
+    </div>
+</div>  
 
 {% endblock %}
