Added shop section to user_home.html

--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -12,7 +12,6 @@
         <p>Our team of specialists are looking forward to hear from you what do you look for and to give you directions on how to enhance your experience as a 
         dog-owner-to-be or how to help your pack accepting their new buddy.</p>
         <h4>Visit our <a href="#" >adoption page</a></h4>
-        <div class="test-div"></div>
     </div>
 </div>  
 <div class="parallax-container">
@@ -27,7 +26,19 @@
         depending on how you and your dog are communicating.</p>
         <p>One-on-one or group sessions are available all year around.</p>
         <h4>Visit our <a href="#" >PAWER Training</a> page</h4>
-        <div class="test-div"></div>
+    </div>
+</div>  
+<div class="parallax-container">
+    <div class="parallax"><img src="/static/images/pet_store.jpg"></div>
+</div>
+<div class="section white">
+    <div class="row container">
+        <h2 class="header">Go shopping!</h2>
+        <p class="secondary-text">Looking for dog food, new toys, vets, grooming and other services? We've got your back!</p>
+        <p>Go through a variety of shops that offer as many options of products as you can dare to imagine!</p>
+        <p>The staff in store are looking forward to help you finding whar you're looking for and guide you to the best choices.</p>
+        <p>If you prefer to buy online, some stores offer you live chat for support in real time.</p>
+        <h4>Visit our <a href="#" >PAWER Shops</a> page</h4>
     </div>
 </div>  
 
