--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,7 +66,6 @@ p {
 
 .nav-wrapper .logo-box .three-words {
   padding: 0 0.3rem 0.6rem;
-  margin: auto;
 }
 
 .nav-wrapper .logo-box .three-words p {
@@ -117,6 +116,12 @@ p {
   .menu-icon {
     font-size: 4rem !important;
     margin: -0.5rem !important;
+  }
+}
+
+@media screen and (max-width: 1025px) {
+  .nav-wrapper li a {
+    padding: 0.5rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
