Updated menu under 1025px

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 	<header>
 		<nav>
 			<div class="row nav-wrapper">
-                <div class="col s4">
+                <div class="col s4 menu-box">
                     <a href="#" data-activates="mobile-menu" class="button-collapse col s1"><i class="material-icons menu-icon">menu</i></a>
                     <ul id="nav-mobile" class="hide-on-med-and-down">
                         <li><a href="{{url_for('user_home')}}">Home</a></li>
