--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,8 +31,8 @@ p {
   width: 100%;
 }
 
-.nav {
-  padding: 1rem;
+nav {
+  position: fixed;
 }
 
 .nav-wrapper {
@@ -40,8 +40,20 @@ p {
   padding: 0 1rem;
 }
 
-.nav-wrapper .menu-icon {
+.nav-wrapper .menu-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+  max-height: 100%;
+}
+
+.nav-wrapper .menu-box .menu-icon {
   color: #343334;
+}
+
+.nav-wrapper .menu-box li {
+  max-height: 100%;
 }
 
 .nav-wrapper li a {
@@ -120,8 +132,13 @@ p {
 }
 
 @media screen and (max-width: 1025px) {
-  .nav-wrapper li a {
+  nav {
+    height: 5.5rem;
     padding: 0.5rem;
+    background-color: #FCD23C;
+  }
+  .nav-wrapper li a {
+    padding: 0 0.5rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
