--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -23,6 +23,7 @@ html {
 
 a {
     text-decoration: none;
+    color: black;
 }
 
 .header {
@@ -108,6 +109,7 @@ nav {
     .register-box {
         text-align: right;
         font-size: 1.5rem;
+        padding: 0;
     }
 
     span {
