remove unnecessary col s1 from menu button

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 		<nav>
 			<div class="row nav-wrapper">
                 <div class="col s4 menu-box">
-                    <a href="#" data-activates="mobile-menu" class="button-collapse col s1"><i class="material-icons menu-icon">menu</i></a>
+                    <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons menu-icon">menu</i></a>
                     <ul id="nav-mobile" class="hide-on-med-and-down">
                         <li><a href="{{url_for('user_home')}}">Home</a></li>
                         <li><a href="{{url_for('user_home')}}">Adoption</a></li>
@@ -52,10 +52,7 @@
 	<!-- jQueryhere has to go BEFORE Materialize because jQuery needs to be active FIRST -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script src="static/js/script.js"></script>
-	<script type="text/javascript">
-		
-	</script>
+    <script src="static/js/script.js"> type="text/javascript"</script>
 </body>
 
 </html>
