--- a/templates/base.html
+++ b/templates/base.html
@@ -45,14 +45,40 @@
 			</div>
 		</nav>
 	</header>
-    {% block content %}
+    <main>
+        {% block content %}
 
-    {% endblock %}
-
+        {% endblock %}
+    </main>
+    <!-- Footer structure from Materialize documentation -->
+    <footer class="page-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col s6">
+                    <h5 class="white-text">About PAWER</h5>
+                    <p class="grey-text text-lighten-4">We are passionate about dogs and we want to make it easier for everyone to find their best friends.</p>
+                </div>
+                <div class="col offset-s2 s4">
+                    <h5 class="white-text">Visit our Social Channels</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" href="#!">Youtube</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Twitter</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Facebook</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Instagram</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2020 PAWER Copyright
+            </div>
+        </div>
+    </footer>
 	<!-- jQueryhere has to go BEFORE Materialize because jQuery needs to be active FIRST -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script src="static/js/script.js"> type="text/javascript"</script>
+    <script src="static/js/script.js"></script>
 </body>
 
 </html>
