--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 
 <head>
 	<!-- Material icons by google, possible to also use font awesome, no problem. -->
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 	<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
 </head>
@@ -55,16 +55,16 @@
         <div class="container">
             <div class="row">
                 <div class="col s6">
-                    <h5 class="white-text">About PAWER</h5>
-                    <p class="grey-text text-lighten-4">We are passionate about dogs and we want to make it easier for everyone to find their best friends.</p>
+                    <h5>About PAWER</h5>
+                    <p>We are passionate about dogs and we want to make it easier for everyone to find their best friends.</p>
                 </div>
                 <div class="col offset-s2 s4">
-                    <h5 class="white-text">Visit our Social Channels</h5>
+                    <h5>Visit our Social Channels</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="#!">Youtube</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Twitter</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Facebook</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Instagram</a></li>
+                        <li><a href="#!">Youtube</a></li>
+                        <li><a href="#!">Twitter</a></li>
+                        <li><a href="#!">Facebook</a></li>
+                        <li><a href="#!">Instagram</a></li>
                     </ul>
                 </div>
             </div>
