--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <div class="col s4 register-box">
-                    <a class="btn waves-effect general-text register-button">Register</a>
+                    <a class="btn waves-effect general-text register-button" href="{{url_for('register')}}">Register</a>
                 </div>
                 
 			</div>
