--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -53,7 +53,10 @@ p {
     width: 100%;
 }
 
-
+[type="radio"]:not(:checked), [type="radio"]:checked {
+    position: relative;
+    opacity: 1;
+}
 
 // Base.html
 
@@ -162,6 +165,14 @@ nav {
     }
 }
 
+// Choose_account
+
+.card-title{
+    color: $black-color;
+}
+.card-icon{
+    font-size: 7rem;
+}
 
 
 
