Updated register process to one dynamic page

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <div class="col s4 register-box">
-                    <a href="{{url_for('choose_account')}}" class="btn waves-effect general-text register-button">Register</a>
+                    <a href="{{url_for('register')}}" class="btn waves-effect general-text register-button">Register</a>
                 </div>
                 
 			</div>
