--- a/templates/register.html
+++ b/templates/register.html
@@ -8,56 +8,61 @@
     <div class="row container">
         <h2 class="header">Register</h2>
         <p>Choose one of the categories below to choose a type for your account</p>
-        <div class="row">
-            <form class="col s12">
-                <div class="row">
-                    <label>
-                        <input class="with-gap" value='dogs' name="group1" type="radio" />
-                        <span>Dog</span>
-                    </label>
-                    <label>
-                        <input class="with-gap" value='users' name="group1" type="radio"  checked />
-                        <span>User</span>
-                    </label>
-                    <label>
-                        <input class="with-gap" value='services' name="group1" type="radio" />
-                        <span>Service</span>
-                    </label>
-                    <label>
-                        <input class="with-gap" value='stores' name="group1" type="radio"  />
-                        <span>Store</span>
-                    </label>
-                </div>
-                <div class="row">
-                    <div class="input-field col s6">
-                        <input id="first_name" type="text" class="validate" required>
-                        <label for="first_name">First Name</label>
+        <div class="row card-row">
+            <div class="col s3">
+                <div class="card">
+                    <span class="card-title">Dogs</span>
+                    <div class="card-image">
+                        <i class="material-icons card-icon">pets</i>
+                        <a value="dogs" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse account-type"><i class="material-icons">add</i></a>
                     </div>
-                    <div class="input-field col s6">
-                        <input id="last_name" type="text" class="validate" required>
-                        <label for="last_name">Last Name</label>
+                    <div class="card-content">
+                        <p>Add new dog to the database</p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="password" type="password" class="validate" required>
-                        <label for="password">Password</label>
+            </div>
+            <div class="col s3">
+                <div class="card">
+                    <span class="card-title">User</span>
+                    <div class="card-image">
+                        <i class="material-icons card-icon">person</i>     
+                        <a value="users" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse account-type"><i class="material-icons">add</i></a>
+                    </div>
+                    <div class="card-content">
+                        <p>Adopt, hire a service or find the nearest store!</p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="email" type="email" class="validate" required>
-                        <label for="email">Email</label>
+            </div>
+            <div class="col s3">
+                <div class="card">
+                    <span class="card-title">Services</span>
+                    <div class="card-image">
+                        <i class="material-icons card-icon">supervisor_account</i>  
+                        <a value="services" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse account-type"><i class="material-icons">add</i></a>
+                    </div>
+                    <div class="card-content">
+                        <p>Offer your service and find new customers!</p>
                     </div>
                 </div>
-                <div class="row">
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Create Account
-                        <i class="material-icons right">playlist_add</i>
-                    </button>
+            </div>
+            <div class="col s3">
+                <div class="card">
+                    <span class="card-title">Stores</span>
+                    <div class="card-image">
+                        <i class="material-icons card-icon">shopping_cart</i>
+                        <a value="stores" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse account-type"><i class="material-icons">add</i></a>
+                    </div>
+                    <div class="card-content">
+                        <p>Expose your brand to new consumers!</p>
+                    </div>
                 </div>
-            </form>
+            </div>
         </div>
+        <div class="row" id="add_user_form"></div>
     </div>
 </div>  
+<div class="parallax-container">
+    <div class="parallax"><img src="/static/images/pup_deck.jpg"></div>
+</div>
 
 {% endblock %}
