--- a/static/css/style.css
+++ b/static/css/style.css
@@ -151,16 +151,28 @@ nav {
   width: 55%;
 }
 
-.card {
+.card-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.card-row .card {
   min-height: 100%;
+  padding: 2.5rem 0 0;
 }
 
-.card-title {
+.card-row .card .card-title {
   color: #343334;
+  font-weight: 500;
 }
 
-.card-icon {
+.card-row .card .card-icon {
   font-size: 7rem;
+}
+
+.card-row .card .card-content {
+  margin: 2rem 0;
 }
 
 @media only screen and (min-width: 601px) {
