--- a/templates/register.html
+++ b/templates/register.html
@@ -14,7 +14,7 @@
                     <span class="card-title">Dogs</span>
                     <div class="card-image">
                         <i class="material-icons card-icon">pets</i>
-                        <a value="dogs" class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse account-type"><i class="material-icons">add</i></a>
+                        <a value="dogs" href="{{ url_for('insert_dogs')}}"class="btn-floating btn-large halfway-fab waves-effect waves-light red pulse account-type"><i class="material-icons">add</i></a>
                     </div>
                     <div class="card-content">
                         <p>Add new dog to the database</p>
@@ -58,7 +58,31 @@
                 </div>
             </div>
         </div>
-        <div class="row" id="add_user_form"></div>
+        <div class="row hide" id="add_user_form">
+            <form action="{{ url_for('insert_dogs') }}" method="POST" class="col s12">
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input id="breed" name="breed" type="text" class="validate" required>
+                        <label for="breed">Breed</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <input id="first_name" name="first_name" type="text" class="validate" required>
+                        <label for="first_name">First Name</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <textarea id="description" name="description" class="materialize-textarea"></textarea>
+                        <label for="icon_telephone">Short description</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <button class="btn waves-effect waves-light" type="submit" name="action">Create Account
+                        <i class="material-icons right">playlist_add</i>
+                    </button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>  
 <div class="parallax-container">
