--- a/templates/register.html
+++ b/templates/register.html
@@ -58,8 +58,8 @@
                 </div>
             </div>
         </div>
-        <div class="row hide" id="add_user_form">
-            <form action="{{ url_for('insert_dogs') }}" method="POST" class="col s12">
+        <div class="row hide" id="dogs">
+            <form action="{{ url_for('insert_dog') }}" method="POST" class="col s12">
                 <div class="row">
                     <div class="input-field col s6">
                         <input id="breed" name="breed" type="text" class="validate" required>
@@ -68,6 +68,105 @@
                     <div class="input-field col s6">
                         <input id="first_name" name="first_name" type="text" class="validate" required>
                         <label for="first_name">First Name</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <textarea id="description" name="description" class="materialize-textarea"></textarea>
+                        <label for="icon_telephone">Short description</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <button class="btn waves-effect waves-light" type="submit" name="action">Create Account
+                        <i class="material-icons right">playlist_add</i>
+                    </button>
+                </div>
+            </form>
+        </div>
+        <div class="row hide" id="users">
+            <form action="{{ url_for('insert_user') }}" method="POST" class="col s12">
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input id="first_name" name="first_name" type="text" class="validate" required>
+                        <label for="first_name">First Name</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <input id="last_name" name="last_name" type="text" class="validate">
+                        <label for="last_name">Last Name</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input id="password" name="name" type="password" class="validate">
+                        <label for="password">Password</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input id="email" name="email" type="email" class="validate">
+                        <label for="email">Email</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <textarea id="description" name="description" class="materialize-textarea"></textarea>
+                        <label for="icon_telephone">Bio</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <button class="btn waves-effect waves-light" type="submit" name="action">Create Account
+                        <i class="material-icons right">playlist_add</i>
+                    </button>
+                </div>
+            </form>
+        </div>
+        <div class="row hide" id="services">
+            <form action="{{ url_for('insert_service') }}" method="POST" class="col s12">
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input id="first_name" name="first_name" type="text" class="validate" required>
+                        <label for="first_name">First Name</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <input id="last_name" name="last_name" type="text" class="validate">
+                        <label for="last_name">Last Name</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input id="type_of_service" name="type_of_service" type="text" class="validate" required>
+                        <label for="first_name">Type of service</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <textarea id="description" name="description" class="materialize-textarea"></textarea>
+                        <label for="icon_telephone">Short description</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input id="email" name="email" type="email" class="validate">
+                        <label for="email">Email</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <button class="btn waves-effect waves-light" type="submit" name="action">Create Account
+                        <i class="material-icons right">playlist_add</i>
+                    </button>
+                </div>
+            </form>
+        </div>
+        <div class="row hide" id="stores">
+            <form action="{{ url_for('insert_store') }}" method="POST" class="col s12">
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input id="store_name" name="store_name" type="text" class="validate">
+                        <label for="store_name">Store Name</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <input id="store_address" name="store_address" type="text" class="validate" required>
+                        <label for="store_addres">Store Address</label>
                     </div>
                 </div>
                 <div class="row">
