--- a/templates/register.html
+++ b/templates/register.html
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <button class="btn waves-effect waves-light" type="submit" name="action">Create Account
+                        <button class="btn waves-effect waves-light" type="submit">Create Account
                             <i class="material-icons right">playlist_add</i>
                         </button>
                     </div>
@@ -109,13 +109,22 @@
                         </div>
                     </div>
                     <div class="row">
+                        <div class="switch">
+                            <label>
+                            <input id="is_staff" name="is_staff" type="checkbox">
+                            <span class="lever"></span>
+                            Is Staff
+                            </label>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="input-field col s12">
                             <textarea id="user_description" name="user_description" class="materialize-textarea"></textarea>
                             <label for="user_description">Bio</label>
                         </div>
                     </div>
                     <div class="row">
-                        <button class="btn waves-effect waves-light" type="submit" name="action">Create Account
+                        <button class="btn waves-effect waves-light" type="submit">Create Account
                             <i class="material-icons right">playlist_add</i>
                         </button>
                     </div>
@@ -152,7 +161,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <button class="btn waves-effect waves-light" type="submit" name="action">Create Account
+                        <button class="btn waves-effect waves-light" type="submit">Create Account
                             <i class="material-icons right">playlist_add</i>
                         </button>
                     </div>
@@ -177,7 +186,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <button class="btn waves-effect waves-light" type="submit" name="action">Create Account
+                        <button class="btn waves-effect waves-light" type="submit">Create Account
                             <i class="material-icons right">playlist_add</i>
                         </button>
                     </div>
