updated link to get_dogs

--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -11,7 +11,7 @@
         <p>Adopting a dog is a big deal, we know. We are here to make sure you find a new best friend that will be a great fit to your life.</p>
         <p>Our team of specialists are looking forward to hear from you what do you look for and to give you directions on how to enhance your experience as a 
         dog-owner-to-be or how to help your pack accepting their new buddy.</p>
-        <h4>Visit our <a href="{{url_for('dogs_list')}}" >adoption page</a></h4>
+        <h4>Visit our <a href="{{url_for('get_dogs')}}" >adoption page</a></h4>
     </div>
 </div>  
 <div class="parallax-container">
